making edits index.html, portfolio.html, styles.css

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
         <section class="activity">
             <h2 class="activity-title">Чем мы занимаемся</h2>
             <ul>
-                <li><img src="./images/box_1.jpg" alt="box1" width="370"></li>
-                <li><img src="./images/box_2.jpg" alt="box2" width="370"></li>
-                <li><img src="./images/box_3.jpg" alt="box3" width="370"></li>
+                <li><img src="./images/box_1.jpg" alt="Product design and marketing" width="370"></li>
+                <li><img src="./images/box_2.jpg" alt="Frontend development" width="370"></li>
+                <li><img src="./images/box_3.jpg" alt="UI Design" width="370"></li>
             </ul>
         </section>
         <section class="teams">
@@ -71,23 +71,23 @@
             <ul class="teams-list">
                 <li class="teams-list-item">
                     <img src="./images/person_1.jpg" alt="Игорь Демьяненко" width="270">
-                    <p class="teams-list-text-bold">Игорь Демьяненко</p>
-                    <p class="teams-list-text-color">Product Designer</p>
+                    <h3 class="teams-list-item-title">Игорь Демьяненко</h3>
+                    <p class="teams-list-item-text">Product Designer</p>
                 </li>
                 <li class="teams-list-item">
                     <img src="./images/person_2.jpg" alt="Ольга Репина" width="270">
-                    <p class="teams-list-text-bold">Ольга Репина</p>
-                    <p class="teams-list-text-color">Frontend Developer</p>
+                    <h3 class="teams-list-item-title">Ольга Репина</h3>
+                    <p class="teams-list-item-text">Frontend Developer</p>
                 </li>
                 <li class="teams-list-item">
                     <img src="./images/person_3.jpg" alt="Николай Тарасов" width="270">
-                    <p class="teams-list-text-bold">Николай Тарасов</p>
-                    <p class="teams-list-text-color">Marketing</p>
+                    <h3 class="teams-list-item-title">Николай Тарасов</h3>
+                    <p class="teams-list-item-text">Marketing</p>
                 </li>
                 <li class="teams-list-item">
                     <img src="./images/person_4.jpg" alt="Михаил Ермаков" width="270">
-                    <p class="teams-list-text-bold">Михаил Ермаков</p>
-                    <p class="teams-list-text-color">UI Designer</p>
+                    <h3 class="teams-list-item-title">Михаил Ермаков</h3>
+                    <p class="teams-list-item-text">UI Designer</p>
                 </li>
             </ul>
         </section>
@@ -95,12 +95,14 @@
     <footer>
         <a href="" class="logo"><span>Web</span>Studio</a>
         <address>
-            <p>г. Киев, пр-т Леси Украинки, 26</p>
+            <ul class="footer-list-contacts">
+                <li>
+                    <p>г. Киев, пр-т Леси Украинки, 26</p>
+                </li>
+                <li><a href="mailto:info@devstudio.com" class="active">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111" class="active">+38 096 111 11 11</a></li>
+            </ul>
         </address>
-        <ul class="footer-list-contacts">
-            <li><a href="mailto:info@devstudio.com" class="active">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111" class="active">+38 096 111 11 11</a></li>
-        </ul>
     </footer>
 </body>
 
