--- a/portfolio.html
+++ b/portfolio.html
@@ -39,48 +39,48 @@
             </ul>
             <ul>
                 <li>
-                    <img src="./images/portfolio_1.jpg" alt="Технокряк" width="370">
-                    <p class="list-paragraph-bold">Технокряк</p>
+                    <img src="./images/portfolio_1.jpg" alt="Technokryak" width="370">
+                    <h3 class="list-title-bold">Технокряк</h3>
                     <p class="list-paragraph">Веб-сайт</p>
                 </li>
                 <li>
-                    <img src="./images/portfolio_2.jpg" alt="Постер New Orlean vs Golden Star" width="370">
-                    <p class="list-paragraph-bold">Постер New Orlean vs Golden Star</p>
+                    <img src="./images/portfolio_2.jpg" alt="Poster New Orlean vs Golden Star" width="370">
+                    <h3 class="list-title-bold">Постер New Orlean vs Golden Star</h3>
                     <p class="list-paragraph">Дизайн</p>
                 </li>
                 <li>
-                    <img src="./images/portfolio_3.jpg" alt="Ресторан Seafood" width="370">
-                    <p class="list-paragraph-bold">Ресторан Seafood</p>
+                    <img src="./images/portfolio_3.jpg" alt="Restaurant Seafood" width="370">
+                    <h3 class="list-title-bold">Ресторан Seafood</h3>
                     <p class="list-paragraph">Приложение</p>
                 </li>
                 <li>
-                    <img src="./images/portfolio_4.jpg" alt="Проект Prime" width="370">
-                    <p class="list-paragraph-bold">Проект Prime</p>
+                    <img src="./images/portfolio_4.jpg" alt="Project Prime" width="370">
+                    <h3 class="list-title-bold">Проект Prime</h3>
                     <p class="list-paragraph">Маркетинг</p>
                 </li>
                 <li>
-                    <img src="./images/portfolio_5.jpg" alt="Проект Boxes" width="370">
-                    <p class="list-paragraph-bold">Проект Boxes</p>
+                    <img src="./images/portfolio_5.jpg" alt="Project Boxes" width="370">
+                    <h3 class="list-title-bold">Проект Boxes</h3>
                     <p class="list-paragraph">Приложение</p>
                 </li>
                 <li>
                     <img src="./images/portfolio_6.jpg" alt="Inspiration has no Borders" width="370">
-                    <p class="list-paragraph-bold">Inspiration has no Borders</p>
+                    <h3 class="list-title-bold">Inspiration has no Borders</h3>
                     <p class="list-paragraph">Веб-сайт</p>
                 </li>
                 <li>
-                    <img src="./images/portfolio_7.jpg" alt="Издание Limited Edition" width="370">
-                    <p class="list-paragraph-bold">Издание Limited Edition</p>
+                    <img src="./images/portfolio_7.jpg" alt="Edition Limited Edition" width="370">
+                    <h3 class="list-title-bold">Издание Limited Edition</h3>
                     <p class="list-paragraph">Дизайн</p>
                 </li>
                 <li>
-                    <img src="./images/portfolio_8.jpg" alt="Проект LAB" width="370">
-                    <p class="list-paragraph-bold">Проект LAB</p>
+                    <img src="./images/portfolio_8.jpg" alt="Project LAB" width="370">
+                    <h3 class="list-title-bold">Проект LAB</h3>
                     <p class="list-paragraph">Маркетинг</p>
                 </li>
                 <li>
                     <img src="./images/portfolio_9.jpg" alt="Growing Business" width="370">
-                    <p class="list-paragraph-bold">Growing Business</p>
+                    <h3 class="list-title-bold">Growing Business</h3>
                     <p class="list-paragraph">Приложение</p>
                 </li>
             </ul>
@@ -89,12 +89,16 @@
     <footer>
         <a href="" class="logo"><span>Web</span>Studio</a>
         <address>
-            <p>г. Киев, пр-т Леси Украинки, 26</p>
+            <ul class="footer-list-contacts">
+                <ul class="footer-list-contacts">
+                    <li>
+                        <p>г. Киев, пр-т Леси Украинки, 26</p>
+                    </li>
+                    <li><a href="mailto:info@devstudio.com" class="active">info@devstudio.com</a></li>
+                    <li><a href="tel:+380961111111" class="active">+38 096 111 11 11</a></li>
+                </ul>
+            </ul>
         </address>
-        <ul class="footer-list-contacts">
-            <li><a href="mailto:info@devstudio.com" class="active">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111" class="active">+38 096 111 11 11</a></li>
-        </ul>
     </footer>
 </body>
 
