making edits HW2

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <nav>
-            <a href="" class="logo"><span>Web</span>Studio</a>
+            <a href="" class="logo"><span class="logo-text">Web</span>Studio</a>
             <ul class="header-list-menu">
                 <li><a href="./index.html" class="header-list-menu-link color active">Студия</a></li>
                 <li><a href="./portfolio.html" class="header-list-menu-link active">Портфолио</a></li>
@@ -93,7 +93,7 @@
         </section>
     </main>
     <footer>
-        <a href="" class="logo"><span>Web</span>Studio</a>
+        <a href="" class="logo"><span class="logo-text">Web</span>Studio</a>
         <address>
             <ul class="footer-list-contacts">
                 <li>
