--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <nav>
-            <a href="" class="logo"><span>Web</span>Studio</a>
+            <a href="" class="logo"><span class="logo-text">Web</span>Studio</a>
             <ul class="header-list-menu">
                 <li><a href="./index.html" class="header-list-menu-link active">Студия</a></li>
                 <li><a href="./portfolio.html" class="header-list-menu-link color active">Портфолио</a></li>
@@ -29,6 +29,7 @@
         </ul>
     </header>
     <main>
+        <!-- <h1>Portfolio</h1> -->
         <section>
             <ul>
                 <li><button type="button" class="button">Все</button></li>
@@ -40,54 +41,54 @@
             <ul>
                 <li>
                     <img src="./images/portfolio_1.jpg" alt="Technokryak" width="370">
-                    <h3 class="list-title-bold">Технокряк</h3>
+                    <h2 class="list-title-bold">Технокряк</h2>
                     <p class="list-paragraph">Веб-сайт</p>
                 </li>
                 <li>
                     <img src="./images/portfolio_2.jpg" alt="Poster New Orlean vs Golden Star" width="370">
-                    <h3 class="list-title-bold">Постер New Orlean vs Golden Star</h3>
+                    <h2 class="list-title-bold">Постер New Orlean vs Golden Star</h2>
                     <p class="list-paragraph">Дизайн</p>
                 </li>
                 <li>
                     <img src="./images/portfolio_3.jpg" alt="Restaurant Seafood" width="370">
-                    <h3 class="list-title-bold">Ресторан Seafood</h3>
+                    <h2 class="list-title-bold">Ресторан Seafood</h2>
                     <p class="list-paragraph">Приложение</p>
                 </li>
                 <li>
                     <img src="./images/portfolio_4.jpg" alt="Project Prime" width="370">
-                    <h3 class="list-title-bold">Проект Prime</h3>
+                    <h2 class="list-title-bold">Проект Prime</h2>
                     <p class="list-paragraph">Маркетинг</p>
                 </li>
                 <li>
                     <img src="./images/portfolio_5.jpg" alt="Project Boxes" width="370">
-                    <h3 class="list-title-bold">Проект Boxes</h3>
+                    <h2 class="list-title-bold">Проект Boxes</h2>
                     <p class="list-paragraph">Приложение</p>
                 </li>
                 <li>
                     <img src="./images/portfolio_6.jpg" alt="Inspiration has no Borders" width="370">
-                    <h3 class="list-title-bold">Inspiration has no Borders</h3>
+                    <h2 class="list-title-bold">Inspiration has no Borders</h2>
                     <p class="list-paragraph">Веб-сайт</p>
                 </li>
                 <li>
                     <img src="./images/portfolio_7.jpg" alt="Edition Limited Edition" width="370">
-                    <h3 class="list-title-bold">Издание Limited Edition</h3>
+                    <h2 class="list-title-bold">Издание Limited Edition</h2>
                     <p class="list-paragraph">Дизайн</p>
                 </li>
                 <li>
                     <img src="./images/portfolio_8.jpg" alt="Project LAB" width="370">
-                    <h3 class="list-title-bold">Проект LAB</h3>
+                    <h2 class="list-title-bold">Проект LAB</h2>
                     <p class="list-paragraph">Маркетинг</p>
                 </li>
                 <li>
                     <img src="./images/portfolio_9.jpg" alt="Growing Business" width="370">
-                    <h3 class="list-title-bold">Growing Business</h3>
+                    <h2 class="list-title-bold">Growing Business</h2>
                     <p class="list-paragraph">Приложение</p>
                 </li>
             </ul>
         </section>
     </main>
     <footer>
-        <a href="" class="logo"><span>Web</span>Studio</a>
+        <a href="" class="logo"><span class="logo-text">Web</span>Studio</a>
         <address>
             <ul class="footer-list-contacts">
                 <ul class="footer-list-contacts">
